--- a/learnsphere/.env.example
+++ b/learnsphere/.env.example
@@ -1,2 +1,10 @@
-DB_URI=
-DB_NAME=
+MONGO_DB_URI=
+MONGO_DB_NAME=
+DATABASE_NAME=
+DATABASE_USER_NAME=
+DATABASE_PASSWORD=
+DATABASE_HOST_URL=
+DATABASE_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+OPENAI_API_KEY=
